# openapi.json
@@ -2460,6 +2460,11 @@
             "type": "boolean",
             "title": "Escalated",
             "default": false
+          },
+          "photos_count": {
+            "type": "integer",
+            "title": "Photos Count",
+            "default": 1
           }
         },
         "type": "object",
